Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21316

QML PathView element does not set the currentIndex correctly when all elements in the model are removed and an element is created

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0
    • 4.7.4, 5.0.0
    • None
    • Qt 4.7.4
      Qt Creator 2.3.0

          Based on Qt 4.7.4 (32 bit)
          Built on Aug 25 2011 at 15:26:28
          From revision 0c9dc89d0b

    Description

      QML PathView element does not set the currentIndex correctly (i.e. to 0, it remains at -1) when all elements in the model are removed and a new element is created

      Steps:

      1. Run the attachment
      2. Press Check - currentIndex = 0, count = 0 // Is this accurate?
      3. Press the Insert button
      4. Press Check - currentIndex = 0, count = 1
      5. Remove the item with the button.
      6. Press Check - currentIndex = -1, count = 0
      7. Create 1 item with the button
      8. Press Check - currentIndex = -1, count = 1

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            alhannin Aleksi Hänninen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes